--- a/10/scss/_utillties.scss
+++ b/10/scss/_utillties.scss
@@ -3,3 +3,20 @@
     padding: 0 30px;
     margin: 0 auto;
 }
+
+$spaceamounts:(1,2,3,4,5);
+
+@each $space in $spaceamounts {
+    .m-#{$space}{
+        margin: #{$space}rem;
+    }
+    .my-#{$space}{
+        margin: #{$space}rem 0;
+    }
+    .p-#{$space}{
+        padding: #{$space}rem;
+    }
+    .py-#{$space}{
+        padding: #{$space}rem 0;
+    }
+}
