--- a/10/scss/style.scss
+++ b/10/scss/style.scss
@@ -1,6 +1,5 @@
-@import'./_config';
-@import'./utillties';
-@import './_button';
+@import'config';
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -22,8 +21,7 @@ a {
 }
 
 .showcase {
-    background-color: $primary-color;
-    color: #fff;
+    @include set-bg($primary-color);
     height: 600px;
 
     nav {
@@ -39,19 +37,20 @@ a {
         li {
             padding: 15px;
         }
+        a{
+            color: set-text-color($primary-color);
+        }
         a:hover{
             color: $secondary-color;
         }
     }
-    a{
-        color: #fff;
-    }
+
     &-content{
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-
+        margin-top: 30px;
         img{
             width: 50%;
         }
@@ -60,9 +59,8 @@ a {
             font-size: 50px;
             line-height: 1.2;
         }
-
-        p{
-            margin: 20px 0;
-        }
     }
 }
+@import'utillties';
+@import 'buttons';
+@import '_mobile';
