--- a/10/css/style.css
+++ b/10/css/style.css
@@ -1,3 +1,6 @@
+:root {
+  --red: red;
+}
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -71,6 +74,30 @@ a {
   padding: 0 30px;
   margin: 0 auto;
 }
+.mt-1 {
+  margin-top: 1rem;
+}
+.pt-1 {
+  padding-top: 1rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
+.pr-1 {
+  padding-right: 1rem;
+}
+.mb-1 {
+  margin-bottom: 1rem;
+}
+.pb-1 {
+  padding-bottom: 1rem;
+}
+.ml-1 {
+  margin-left: 1rem;
+}
+.pl-1 {
+  padding-left: 1rem;
+}
 .m-1 {
   margin: 1rem;
 }
@@ -82,6 +109,30 @@ a {
 }
 .py-1 {
   padding: 1rem 0;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.pt-2 {
+  padding-top: 2rem;
+}
+.mr-2 {
+  margin-right: 2rem;
+}
+.pr-2 {
+  padding-right: 2rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.pb-2 {
+  padding-bottom: 2rem;
+}
+.ml-2 {
+  margin-left: 2rem;
+}
+.pl-2 {
+  padding-left: 2rem;
 }
 .m-2 {
   margin: 2rem;
@@ -95,6 +146,30 @@ a {
 .py-2 {
   padding: 2rem 0;
 }
+.mt-3 {
+  margin-top: 3rem;
+}
+.pt-3 {
+  padding-top: 3rem;
+}
+.mr-3 {
+  margin-right: 3rem;
+}
+.pr-3 {
+  padding-right: 3rem;
+}
+.mb-3 {
+  margin-bottom: 3rem;
+}
+.pb-3 {
+  padding-bottom: 3rem;
+}
+.ml-3 {
+  margin-left: 3rem;
+}
+.pl-3 {
+  padding-left: 3rem;
+}
 .m-3 {
   margin: 3rem;
 }
@@ -107,6 +182,30 @@ a {
 .py-3 {
   padding: 3rem 0;
 }
+.mt-4 {
+  margin-top: 4rem;
+}
+.pt-4 {
+  padding-top: 4rem;
+}
+.mr-4 {
+  margin-right: 4rem;
+}
+.pr-4 {
+  padding-right: 4rem;
+}
+.mb-4 {
+  margin-bottom: 4rem;
+}
+.pb-4 {
+  padding-bottom: 4rem;
+}
+.ml-4 {
+  margin-left: 4rem;
+}
+.pl-4 {
+  padding-left: 4rem;
+}
 .m-4 {
   margin: 4rem;
 }
@@ -118,18 +217,6 @@ a {
 }
 .py-4 {
   padding: 4rem 0;
-}
-.m-5 {
-  margin: 5rem;
-}
-.my-5 {
-  margin: 5rem 0;
-}
-.p-5 {
-  padding: 5rem;
-}
-.py-5 {
-  padding: 5rem 0;
 }
 .btn-primary,
 .btn-secondary {
